--- a/105.md
+++ b/105.md
@@ -4,7 +4,7 @@ NIP-105
 API Service Marketplace
 -------------------------------
 
-`draft` `optional` `author:coachchuckff` `author:unclejim21` `author:cmdruid`
+`draft` `optional` `author:coachchuckff` `author:unclejim21` `author:cmdruid` 
 
 This NIP defines `kind:31402` (a _parameterized replaceable event_) for broadcasting API services, endpoints and their costs in mSats. API services are offered ala carte to be paid via lightning invoices.
 
@@ -22,7 +22,7 @@ API service providers will issue a `kind:31402` event as an API service offering
 ## Server Functions
 ### Create Invoice
 
-Initally, the client will make a POST request to the `endpoint`. The POST body should be exactly what the underlying API is expecting less the API key. This information should also be represented in the `schema` portion of the `content` field.
+Initially, the client will make a POST request to the `endpoint`. The POST body should be exactly what the underlying API is expecting less the API key. This information should also be represented in the `schema` portion of the `content` field.
 
 The service provider will then do the following:
 
@@ -47,7 +47,7 @@ Total Cost = (cost_variable) * cost_units + cost_flat
 
 This allows servers to offer fair & sustainable pricing based on the resources required to provide the service. Likewise this edit on the spec allows backward compatibility with previous pricing (which was flat only) as well as new use cases/business models.
 
-One example would be a voice to text transcription service. The rate may be in seconds and the cost_variable may be 200 msats and cost_flat is 1000 msats. Therfore a 100 second transcription job should cost 21000 msats.
+One example would be a voice to text transcription service. The rate may be in seconds and the cost_variable may be 200 msats and cost_flat is 1000 msats. Therefore a 100 second transcription job should cost 21000 msats.
 
 ### Get Results
 
@@ -67,7 +67,7 @@ This specification is designed to optionally support the use of zap requests and
 
 When the service publishes an offer event, the service may include a `receipt` tag, with the value set to `true`.
 
-Example: `tags: [ [ "receipt": true ] ]`
+Example: `tags: [ [ "receipt": "true" ] ]`
 
 This indicates that the provider supports the issuance of [NIP-57](https://github.com/nostr-protocol/nips/blob/master/57.md) zap receipts.
 
@@ -85,7 +85,7 @@ The zap request should follow all standard conventions as defined in the [NIP-57
 
 ### Lightning Invoice
 
-When the service responds with a lightning invoice, if the client POST request has specified a valid `zap-request` in the header, then the description hash of the invoice MUST match the sha256 hash of the complete zap request as a serialized JSON string. This behavior is defined as part of the [NIP-57](https://github.com/nostr-protocol/nips/blob/master/57.md) specification.
+When the service responds with a lightning invoice, if the client's POST request has specified a valid `zap-request` in the header, then the description hash of the invoice MUST match the sha256 hash of the complete zap request as a serialized JSON string. This behavior is defined as part of the [NIP-57](https://github.com/nostr-protocol/nips/blob/master/57.md) specification.
 
 ### Zap Receipt
 
@@ -115,15 +115,23 @@ In addition to serving the `zap-receipt` within the header of the response, the 
     tokens = 'TOKENS'
   }
 
-  interface OfferingContent = {
-    endpoint: string,          // The POST endpoint you call to pay/fetch
-    status: OfferingStatus,    // UP/DOWN/CLOSED
-    cost_fixed: number,        // The fixed per call cost in mSats (b in y = mx + b)
-    cost_variable: number,     // The variable cost based on request's units (i.e. 2000msats per min)
-    cost_units: number,        //The units that denominate the variable cost
-    schema?: Object,           // Reccomended - JSON schema for the POST body of the endpoint
-    outputSchema?: Object,     // Reccomended - JSON schema for the response of the call
-    description?: string       // Optional - Description for the end user
+export interface OfferingContent {
+    /** The POST endpoint you call to pay/fetch */
+    endpoint: string,
+    /** UP/DOWN/CLOSED */         
+    status: OfferingStatus,   
+    /** The fixed per call cost in mSats (b in y = mx + b) */ 
+    fixedCost: number,
+    /** The variable cost based on request's units (i.e. 2000msats per min) */
+    variableCost: number,
+    /** The units that denominate the variable cost */
+    costUnits: number,
+    /** Recommended - JSON schema for the POST body of the endpoint */
+    schema?: Object,
+    /** Recommended - JSON schema for the response of the call */
+    outputSchema?: Object,
+    /** Optional - Description for the end user */
+    description?: string
   }
 ```
 
@@ -260,7 +268,7 @@ The following is for the `gpt-3.5-turbo` output schema:
     }
   }
 ```
-### Safey
+### Safety
 
 It is not mandatory, but to raise the barrier to entry, clients should screen service provider's NIP-05 identifier. The domain used in their NIP-05, should be the same domain used for their endpoint.
 
@@ -270,7 +278,7 @@ Clients may wish to create a whitelist of trusted service providers once tested.
 
 - No data integrity - service providers can store/redistribute any data passed to them
 - Service providers could take payment and never return the product
-- Service providers are not gaurenteed to call the endpoint specified in the `s` tag
+- Service providers are not guaranteed to call the endpoint specified in the `s` tag
 - No recourse for errored API fetches
 - The `cost` field may not match the actual final price
 - No proof of purchase
