--- a/105.md
+++ b/105.md
@@ -137,6 +137,19 @@ export interface OfferingContent {
 
 `.tag` MUST include the following:
 
+//TODO compile a list of generics and name brands
+// Take out the `s` tag
+// `d` tag -> your endpoint
+// `i` tag for input json hash
+// `o` tag for output json hash
+
+tags: [
+  ['t', 'llvm'],
+  ['t', 'chatgpt']
+  ['t', 'stable diffusion']
+]
+
+
 - `s`, the service tag should simply be the underlying API endpoint of the service provided. For example if you are offering a ChatGPT service, you would set `s` = `https://api.openai.com/v1/chat/completions`. This way the service they are buying is implicit.
 - `d`, following **parameterized replaceable events** in [NIP-01](https://github.com/nostr-protocol/nips/blob/master/01.md), this tag allows this event to be replaceable. Since there should only be one service per pubkey, the `d` tag should match the `s` tag.
 
