--- a/105.md
+++ b/105.md
@@ -12,8 +12,8 @@ API service providers will issue a `kind:31402` event as an API service offering
 
 ## Protocol flow
 
-1. API Service provider creates and hosts API service offerings, they then issue a `kind:31402` event for each `s` ( service ) tag.
-2. Client fetches API offerings by `s` tag.
+1. API Service provider creates and hosts API service offerings, they then issue a `kind:31402` event for each `d` ( service ) tag.
+2. Client fetches API offerings by `d`, `i` ( input schema ) or `o` ( output schema ) tag.
 3. Client chooses a provider(s) and POSTs to their `endpoint`. The POST body should match exactly what is required by the underlying API less the API key. ( Or following the note's `schema` )
 4. The service provider should validate their request and return a lightning invoice with a `successAction` url. The `successAction` url should be formatted as such: `<endpoint>/<invoice_hash>/get_result`
 5. The client pays.
@@ -27,8 +27,11 @@ Initially, the client will make a POST request to the `endpoint`. The POST body 
 The service provider will then do the following:
 
 1. Validate their API request
-2. Issue a lightning invoice
+2. Issue a lightning invoice ( 402 )
+-- OR --
+2. For zero-cost API, return the response ( 200 )
 
+If returning a 402:
 The issued lightning invoice will contain a `successAction` url formatted as so:
 
 ```typescript
@@ -151,7 +154,11 @@ tags: [
 
 
 - `s`, the service tag should simply be the underlying API endpoint of the service provided. For example if you are offering a ChatGPT service, you would set `s` = `https://api.openai.com/v1/chat/completions`. This way the service they are buying is implicit.
-- `d`, following **parameterized replaceable events** in [NIP-01](https://github.com/nostr-protocol/nips/blob/master/01.md), this tag allows this event to be replaceable. Since there should only be one service per pubkey, the `d` tag should match the `s` tag.
+- `d`, following **parameterized replaceable events** in [NIP-01](https://github.com/nostr-protocol/nips/blob/master/01.md), this tag allows this event to be replaceable. This `s` tag should largely describe the service being provided. 
+- `i` and `o` tag, these tags will be the hash of the **i**nput and **o**utput json schema provided in the content field. This will help discovery.
+
+### Service Provider Heartbeat and State
+The service provider should update the kind `kind:31402` offering every couple of minutes or so. This will help sort out stale and potentially inactive services. Additionally, when stopping a service, the service provider should mark their state with `CLOSED`.
 
 ### Example Service Event
 
@@ -171,8 +178,9 @@ const event = {
   "created_at": 1675642635,
   "content": JSON.stringify(content),
   "tags": [
-    ["s", "https://api.openai.com/v1/chat/completions"]
-    ["d", "https://api.openai.com/v1/chat/completions"],
+    ["d", "ChatGPT"]
+    ["i", "c189fb5461886d68ef41a3976c7661666923894b8ba948bec90fa276fbdd1829"],
+    ["o", "a5c7eb13e10caa40c0b04374ca68d9f19c30177ec3871823881b9e86bab9d549"],
   ],
   "pubkey": "<pubkey>",
   "id": "<id>"
@@ -281,6 +289,19 @@ The following is for the `gpt-3.5-turbo` output schema:
     }
   }
 ```
+
+## Extra Considerations
+
+### Client Side Usage
+
+There will need to be some consensus on the I/O and discovery/classification of services. There is some preliminary work done being here in the form of a client-side SDK.
+
+The scheme is still TBD.
+
+![IO](./assets/iomappinggeneral.jpg)
+![IO](./assets/iomapping.jpg)
+
+
 ### Safety
 
 It is not mandatory, but to raise the barrier to entry, clients should screen service provider's NIP-05 identifier. The domain used in their NIP-05, should be the same domain used for their endpoint.
